--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!doctype html>
   <html lang="en">
       <head>
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
             <title>
               About
@@ -67,25 +68,14 @@
         </table>
       </div>
       <svg
-         xmlns:dc="http://purl.org/dc/elements/1.1/"
-         xmlns:cc="http://creativecommons.org/ns#"
-         xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-         xmlns:svg="http://www.w3.org/2000/svg"
-         xmlns="http://www.w3.org/2000/svg"
-         xmlns:xlink="http://www.w3.org/1999/xlink"
-         xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd"
-         xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
          version="1.1"
          id="svg46"
          xml:space="preserve"
          width="1600"
          height="1600"
          viewBox="0 0 1600 1600"
-         sodipodi:docname="losAngeles.svg"
-         inkscape:version="1.0.2 (e86c8708, 2021-01-15)"><metadata
-           id="metadata52"><rdf:RDF><cc:Work
-               rdf:about=""><dc:format>image/svg+xml</dc:format><dc:type
-                 rdf:resource="http://purl.org/dc/dcmitype/StillImage" /><dc:title></dc:title></cc:Work></rdf:RDF></metadata><defs
+         >
+         <defs
            id="defs50"><clipPath
              clipPathUnits="userSpaceOnUse"
              id="clipPath64"><path
@@ -166,29 +156,9 @@
              clipPathUnits="userSpaceOnUse"
              id="clipPath232"><path
                d="m 7065.6,2462.4 h 1084.8 v 350.398 H 7065.6 Z"
-               id="path230" /></clipPath></defs><sodipodi:namedview
-           pagecolor="#ffffff"
-           bordercolor="#666666"
-           borderopacity="1"
-           objecttolerance="10"
-           gridtolerance="10"
-           guidetolerance="10"
-           inkscape:pageopacity="0"
-           inkscape:pageshadow="2"
-           inkscape:window-width="1281"
-           inkscape:window-height="573"
-           id="namedview48"
-           showgrid="false"
-           inkscape:zoom="0.459375"
-           inkscape:cx="800"
-           inkscape:cy="800"
-           inkscape:window-x="61"
-           inkscape:window-y="575"
-           inkscape:window-maximized="0"
-           inkscape:current-layer="g54" /><g
+               id="path230" /></clipPath></defs>
+               <g
            id="g54"
-           inkscape:groupmode="layer"
-           inkscape:label="ink_ext_XXXXXX"
            transform="matrix(1.3333333,0,0,-1.3333333,0,1600)"><g
              id="g56"
              transform="scale(0.1)"><g
