--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
                 <a  href="index.html" role="menuitem">Home</a>
             </li>
             <li role="presentation">
-                <a  href="about.html" role="menuitem">Bio</a>
+                <a  href="about.html" role="menuitem">About Me</a>
             </li>
             <li role="presentation">
-                <a  href="contact.html" role="menuitem">Contact</a>
+                <a  href="contact.html" role="menuitem">Contact David Lewis</a>
             </li>
             <li>
               <a href="projects.html" role="menuitem">Projects</a>
