--- a/work.html
+++ b/work.html
@@ -20,10 +20,10 @@
                 <a  href="index.html" role="menuitem" class="navigation-list_item">Home</a>
             </li>
             <li role="presentation">
-                <a  href="about.html" role="menuitem" class="navigation-list_item">Bio</a>
+                <a  href="about.html" role="menuitem" class="navigation-list_item">About Me</a>
             </li>
             <li role="presentation">
-                <a  href="contact.html" role="menuitem" class="navigation-list_item">Contact</a>
+                <a  href="contact.html" role="menuitem" class="navigation-list_item">Contact David Lewis</a>
             </li>
             <li>
                 <a href="projects.html" role="menuitem" class="navigation-list_item">Projects</a>
